# mimic

./: .coveragerc  .gitignore  .gitreview  AUTHORS  ChangeLog  README  README.md  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
etc/: mimic.conf
etc/mimic/: api-paste.ini.sample  mimic.conf.sample  policy.json  pxe.template
etc/monster/: api-paste.ini.sample  monster.conf.sample
mimic/: service.py
mimic/api/: __init__.py  app.py  app.wsgi  auth.py  config.py  controller.py  disk_partition.py  faultwrap.py  foreman_helper.py  hooks.py  judgement.py  middleware.py  router.py  versions.py
mimic/api/.cache/: 192.168.1.2,3000,api,operatingsystems,728efeda4d3c63512298c4f762dd2958  192.168.3.218,3000,api,hostgroups,5a1be042a1f38dba1c4009169eefb7cd  (+1 more)
mimic/cmd/: api.py  generate_override.py  log_daemon.py  manage.py
mimic/common/: __init__.py  config.py  context.py  exception.py  paths.py  policy.py  service.py
mimic/db/: __init__.py  api.py  migration.py
mimic/engine/: __init__.py  designate_helper.py  foreman_helper.py  judgement.py  keystone_helper.py  manager.py  network_scanning.py
mimic/tests/: base.py  conf_fixture.py
monster/: __init__.py  service.py
monster/api/: auth.py  controller.py  disk_partition.py  faultwrap.py  foreman_helper.py  judgement.py  router.py  versions.py
monster/common/: config.py  context.py  exception.py
monster/db/: __init__.py
tools/: needed.rst  patch_tox_venv.py  pip-requires  test-requires
(+129 files in other folders)
