[metadata]
name = mimic 
version = 0.2
summary = App Store 
author = JimJiang
author-email = wentian@unitedstack.com 
home-page = http://www.ustack.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    mimic 

[entry_points]
console_scripts = 
    mimic-api = mimic.cmd.api:main
    mimic-dbsync = mimic.cmd.manage:main
